--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
           if (result.status === '1') {
             var city = result.regeocode.addressComponent.city[0]
             var building = result.regeocode.addressComponent.building.name[0]
-            alert(`当前您所在的位置为——\n${city}, ${building}\n所在地理坐标为——\n${param.lat}, ${param.long}`)
+            display.innerHTML = `当前您所在的位置为——\n${city}, ${building}\n所在地理坐标为——\n${param.lat}, ${param.long}`
+            // alert(`当前您所在的位置为——\n${city}, ${building}\n所在地理坐标为——\n${param.lat}, ${param.long}`)
           }
         }, (error) => {
           console.log('获取地理信息逆编码失败...')
