--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             // alert(`当前您所在的位置为——\n${city}, ${building}\n所在地理坐标为——\n${param.lat}, ${param.long}`)
           }
         }, (error) => {
+          alert(error)
           console.log('获取地理信息逆编码失败...')
           console.log(error)
         })
