--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   var btn = document.querySelector('button')
   var jumpBtn = document.querySelector('button.jump')
 
+  var startPoint
+
   function get(url) {
     return new Promise(function (resolve, reject) {
       var req = new XMLHttpRequest()
@@ -93,6 +95,7 @@
             var building = result.regeocode.
             display.innerHTML = `当前您所在的位置为——\n${city}, ${formatted_address}\n所在地理坐标为——\n${param.lat}, ${param.long}`
             // alert(`当前您所在的位置为——\n${city}, ${building}\n所在地理坐标为——\n${param.lat}, ${param.long}`)
+            startPoint = formatted_address
           } else {
             alert('高德API返回不是1--' + result.status + ',' + result.info)
           }
@@ -108,7 +111,12 @@
     }
   }
 
-  btn.onclick = action
+  var queryAct = function () {
+    const url = "iosamap://navi?sourceApplication=wechat&backScheme=wechat&lat=34.795862&lon=113.802870&dev=0&style=2"
+    window.location.href = url
+  }
 
+  btn.onclick = action
+  jumpBtn.onclick = queryAct
 </script>
 </html>
