--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
           console.log(response)
           var result = JSON.parse(response)
           if (result.status === '1') {
-            var city = result.regeocode.addressComponent.city[0]
+            var city = result.regeocode.addressComponent.city
             var formatted_address = result.regeocode.formatted_address
-            display.innerHTML = `当前您所在的位置为——\n${city}, ${formatted_address}\n所在地理坐标为——\n${param.lat}, ${param.long}`
+            display.innerHTML = `当前您所在的位置为——\n${city}, ${formatted_address}\n所在地理坐标为——\n${param.location}`
             // alert(`当前您所在的位置为——\n${city}, ${building}\n所在地理坐标为——\n${param.lat}, ${param.long}`)
             startPoint = formatted_address
           } else {
